# web_splat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  main.cpp  main.py  pyproject.toml
css/: styles.css
js/: script.js
src/helpers/: splat_helper.py
static/js/: results.js  start.js
static/styles/: results.css  start.css
templates/: results.html  start.html
