[project]
name = "web-splat"
version = "0.1.0"
description = "The web interface for SPLAT! utility"
authors = [
    {name = "Roman Lapin",email = "lapin.28042003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
